<resources>
    <string name="app_name">Sage Rider</string>
    <string name="login_dummy">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="invalid_email_password">Invalid Email or Password</string>
    <string name="get_started">Get Started</string>
    <string name="under_development">Under Development!</string>
    <string name="lets_get_started">Let\'s get started with us</string>
    <string name="to_begin_enter_number">To begin, enter your number</string>
    <string name="to_begin_enter_number_text">We need your mobile phone number to verify your account and to be able to get in touch.</string>
    <string name="next">Next</string>
    <string name="internet_not_available">Please check your internet connection.</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="add_email_address">Add your e-mail address</string>
    <string name="add_email_address_desc">We need it to look up your account or create\nnew one</string>
    <string name="enter_email">Please enter e-mail address</string>
    <string name="enter_email_incorrect">Please enter correct e-mail address</string>
    <string name="add_name">Add your name</string>
    <string name="add_name_desc">This helps drives to find you</string>
    <string name="how_to_pay">How do you want to pay?</string>
    <string name="how_to_pay_desc">Add your card or other payment method and ride carefree</string>
    <string name="payment_method">Payment method</string>
    <string name="credit_card">Credit card</string>
    <string name="paypal">Paypal</string>
    <string name="pay">Pay</string>
    <string name="google_pay">Google pay</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_new_account">Add New Account</string>
    <string name="done">Done</string>
    <string name="title_activity_maps">Map</string>
    <string name="places_api_key">AIzaSyCakfrn8v21QIHvUQk19XcXFmVkpDp6RF4</string>
    <string name="location_permission_rationale">Location permission is needed for core functionality</string>
    <string name="loc_permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Open Sage</string>
    <string name="cancel">Cancel</string>
    <string name="location_not_found">Location not found! Please try again</string>
    <string name="set_address">Set address</string>
    <string name="no_cars_available">No cars available right now.</string>
    <string name="no_cars_available_desc">We might not be in your area yet. Please check back later.</string>
    <string name="back">Back</string>
    <string name="press_back_to_exit">Click button one more time.</string>
    <string name="confirm">Confirm</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="request_sage">Request Sage</string>
    <string name="dont_cancel_request">Don’t Cancel Request</string>
    <string name="update">Update</string>
    <string name="submit">Submit</string>
    <string name="trip_history">Trip History</string>
    <string name="tip_them">Tip Them</string>
    <string name="tip_them_more">Tip Them More</string>
    <string name="account_settings">Account Settings</string>
    <string name="sdcard_permission">SD Card/Camera permission is required to upload picture.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="edit_phone_number">Enter phone number</string>
    <string name="edit_email">Edit email</string>
    <string name="saved_places">Saved places</string>
    <string name="promo">Promo</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="no_promo_code">You have no promotions\nat the moment.</string>
    <string name="free_rides">Free rides</string>
    <string name="trip_fare">Trip fare</string>
    <string name="specific_trip_inquiry">Specific trip inquiry page</string>
    <string name="cell_image">Cell Image</string>
    <string name="inquiry_hint">Please, tell some more here</string>
    <string name="inquiry_submitted">Your inquiry submitted! We will rich out to you within 24 hours.</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="publishablekey">pk_test_FtmdbZdTCf2aIwjTgickTmRj00Hn4VIhtl</string>
    <string name="upcoming_feature">Upcoming Feature</string>
    <string name="default_channel_name">Maroof</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verifying_menu_verification">SMS Code</string>
    <string name="verifying_menu_verification_submit">Submit</string>
    <string name="verifying_menu_verification_cancel">Cancel Verification</string>
    <string name="status_default_value">Unverified</string>
    <string name="verifying_menu_verification_required_text">The SMS code is required</string>
    <string name="toast_cancelled_verification">Cancelled verification</string>
    <string name="cancel_verification">Cancel</string>
    <string name="verifier_registered">Registered for SMS receiver</string>
    <string name="verifier_server_response">Server sent SMS</string>
    <string name="verifying_text">Verifying SMS</string>
    <string name="menu_reset_verification_title">Reset Verification</string>
    <!-- This should point to your servers. -->
    <string name="reset_btn">Reset Verification</string>
    <string name="toast_unable_to_reset">Unable to reset verification, perhaps you weren\'t verified.</string>
    <string name="toast_something_wrong">Something went wrong, please try again.</string>
    <string name="reset_title">Reset your verification</string>
    <string name="sign_up_title">Sign Up to SMS Verify</string>
    <string name="menu_setting_title">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toast_request_error">Error in response from server</string>
    <string name="pref_title_app_signature">App signature</string>
    <string name="pref_desc_app_signature">Unknown</string>
    <string name="submit_sign_up">Submit</string>
    <string name="phone_verify_notify_title">Confirming phone number</string>
    <string name="phone_verify_notify_message">%s</string>
    <string name="toast_verified">Verified Phone Number</string>
    <string name="toast_unverified">Unverified Phone Number</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="welcome_text">For all your sms verification needs.</string>
    <string name="status_text">Status: unverified</string>
    <string name="status_text_template">Status: verified \'%s\'.</string>
    <string name="toast_start_verify">Verifying phone number: %s</string>
    <string name="pref_desc_secret_override">Server Secret Override</string>
    <string name="pref_title_secret_override">Server Override</string>

    <string name="server_client_secret">AWSEDRFTFYDR</string>
    <string name="server_client_secret_v8">AWSEDRFTFYDR</string>

     <string name="url_verify">http://23.23.6.18:3000/api/verify</string>
     <string name="url_request">http://23.23.6.18:3000/api/request</string>
     <string name="url_reset">http://23.23.6.18:3000/api/reset</string>

    <!--<string name="url_verify">https://sagerideshare.com:3000/api/verify</string>
    <string name="url_request">https://sagerideshare.com:3000/api/request</string>
    <string name="url_reset">https://sagerideshare.com:3000/api/reset</string>-->

    <string name="facebook_channel">Facebook</string>
    <string name="sharing_feature">Sharing</string>
    <string name="branch_test_key">key_test_hlMN55xV2OYccO4WPC4UBkoeCvlHwhlM</string>
    <string name="branch_main_key">key_live_loUQY8EN3R5bpP96Sq5PboakBtcVzips</string>
    <string name="update_route">Update Route</string>
    <string name="update_address">Update Address</string>

</resources>
