<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.phoneverification.PhoneVerificationActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="phoneViewModel"
            type="com.sage.cabapp.ui.phoneverification.PhoneViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20"
                android:background="@drawable/ic_arrow_back_black"
                android:onClick="@{()->phoneViewModel.goBack()}" />

            <LinearLayout
                android:id="@+id/subview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/to_begin_enter_number"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/textsize_20" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_30"
                    android:gravity="center"
                    android:text="@string/to_begin_enter_number_text"
                    android:textColor="@color/description"
                    android:textSize="@dimen/textsize_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mainview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_20"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/sage_small_s" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_3"
                        android:background="@drawable/sage_small_a" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_3"
                        android:background="@drawable/sage_small_g" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_3"
                        android:background="@drawable/sage_small_e" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    fontPath="fonts/Roboto-Medium.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/lets_get_started"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/textsize_20" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_30"
                android:layout_marginEnd="@dimen/margin_20"
                android:background="@drawable/rectangle_light_grey">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/margin_20"
                    android:paddingTop="@dimen/margin_10"
                    android:paddingEnd="@dimen/margin_10"
                    android:paddingBottom="@dimen/margin_10">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_usa_flag" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:text="+1"
                        android:textColor="@color/edittext_color"
                        android:textSize="@dimen/textsize_16" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/margin_10"
                        android:background="@color/gray" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:background="@color/white"
                        android:drawablePadding="@dimen/margin_10"
                        android:hint="Your phone number"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/edittext_color"
                        android:textSize="@dimen/textsize_16" />

                </LinearLayout>

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_110"
                android:layout_marginTop="@dimen/margin_5"
                android:layout_marginEnd="@dimen/margin_20"
                android:textColor="@color/red"
                android:textSize="@dimen/textsize_12"
                android:visibility="gone" />

            <com.manojbhadane.QButton
                android:id="@+id/get_started"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:onClick="@{()->phoneViewModel.checkNumber()}"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_16"
                app:qb_backgroundColor="@color/colorPrimary"
                app:qb_radius="0"
                app:qb_strokeColor="@color/space_transparent"
                app:qb_strokeWidth="0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/terms_and_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_20"
                android:gravity="center"
                android:textColor="@color/heading"
                android:textSize="@dimen/textsize_12" />
        </LinearLayout>
    </FrameLayout>

</layout>